--- a/Board/board/src/main/resources/application.properties
+++ b/Board/board/src/main/resources/application.properties
@@ -21,3 +21,10 @@ mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 # - ALL, TRACE, DEBUG, INFO, WARN, ERROR, OFF
 logging.level.root=DEBUG
 logging.level.com.yhm.board=DEBUG
+
+# 파일 업로드 경로 
+upload.path=C:/upload
+
+# 파일 사이즈
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=200MB
